--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-marital-status.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-marital-status.html
@@ -52,10 +52,10 @@
            },
 {
              title: "Update your information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information.html"
            },{
 			  title: "Update your personal information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html"
            }
          ],
            search: true,
@@ -85,7 +85,7 @@
     <p>Notify the CRA if:
 	    <ul>
 		    <li>You married</li>
-		    <li>You became <a href="#commonlaw" class="wb-lbx lbx-modal" role="button">common-law</a></li>
+		    <li>You became <a href="#commonlaw" class="wb-lbx lbx-modal" role="button">common-law</a><span class="far fa-question-circle"></span></li>
 		    <li>You separated for more than 90 days (due to a breakdown in the relationship)</li>
 		    <li>You divorced</li>
 		    <li>Your spouse or common-law partner died</li>
@@ -113,12 +113,12 @@
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
             <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
-			<p><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
+			<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
 
 			 <p>Change your marital status online using My Account.</p>
-   <p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
+   <p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
  <ol class="">
-   <li class="mrgn-bttm-sm">Sign in<!-- to your <strong>online account</strong><br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a>--> </li>
+   <li class="mrgn-bttm-sm">Sign in<!-- to your <strong>online account</strong><br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a>--> </li>
     <li class="mrgn-bttm-sm">Select <strong>Profile</strong></li>
     <li class="mrgn-bttm-sm">Scroll to <strong>Marital status</strong></li>
     <li class="mrgn-bttm-sm">Select <strong>Edit</strong></h2>
@@ -128,17 +128,17 @@
 	
 <h2 class=h4>If you can't sign in to your account</h2> 
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
-	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
+	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
 	
 			<!--<details> <summary class="max-content">Make a change for someone else</summary>-->
 			<h2 class=h4>Make a change for someone else</h2>
-		<p>To change a marital status online for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
+		<p>To change a marital status online for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
 			
 
 		</details>
 		<details id="details-panel2" class="provisional wb-details-close">
             <summary><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
-			<p class="mrgn-bttm-lg"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
+			<p class="mrgn-bttm-lg mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
 
 
    <dl class="dl-horizontal">
@@ -222,7 +222,7 @@
 		</details>
 		<details id="details-panel3" class="provisional wb-details-close">
         <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail or fax</summary>
-					<p><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
+					<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
 
 	 <p>Mail or fax your request to your <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/tax-centres.html">tax centre</a> using one of the following options:</p>
 		<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
@@ -334,8 +334,8 @@
 		</details> 
 <details id="details-panel4" class="provisional wb-details-close">
         <summary><span class="far fa-file-alt mrgn-rght-sm"></span>On your tax return</summary>
-  <p class="pull-left"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
-<ul class="pull-left mrgn-lft-md list-unstyled">
+  <p class="pull-left mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
+<ul class="pull-left mrgn-lft-md mrgn-tp-md list-unstyled">
 <li>If you file <strong>electronically</strong>, at the same date and time your return is processed</li>
 
 <li>If you file a <strong>paper return</strong>, approximately 8 weeks after receiving your return</li>
@@ -366,7 +366,7 @@
 <p><a href="https://www.canada.ca/en/contact.html">Contact another Government of Canada department or agency</a></p>
  <h2>Update other information</h2>
 	   <p>Change your other personal details with the CRA, including your address, phone number or email address.</p>
-	   <p><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
+	   <p><a href="/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
 
 	   
 <!-- <div class="mwspanel section">
