--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
@@ -70,7 +70,7 @@
              href: "https://www.canada.ca/en/revenue-agency/services/receiving-payments.html"
            },{
 			  title: "Direct deposit",
-             href: "https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-landing-page.html"
+             href: "https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-landing-page.html"
            }
          ],
            search: true,
@@ -88,7 +88,7 @@
 
 <!--        <p class="pull-left small"><strong>You may be looking for:</strong></p>
 <ul class="pull-left mrgn-lft-md list-unstyled small">
-<li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-address.html">Change your business address</a></li>
+<li><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-address.html">Change your business address</a></li>
 <li><a href="">Change your trust address</a></li>
 	<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/changing-a-charitys-address-phone-number.html">Change your charity address</a></li>
 
@@ -143,7 +143,7 @@
 		<details id="details-panel1" class="provisional wb-details-close">
             <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
 <!--<p><span class="far fa-clock"></span> <strong>Processing time:</strong> Immediate</p>-->
-				   <p><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
+				   <p class="mrgn-tp-md"><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
 
 		    <p>Sign up for direct deposit or manage your information using My Business Account.</p>
   <p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">CRA My Business Account</a></p>
@@ -158,9 +158,9 @@
   </ol>		
 <h3 class=h4>If you can't access your account</h3>
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel3">update your information through your Canadian financial institution</a>.</p>
-	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
+	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
 <!--	<details><summary class="max-content">Make a change for someone else</summary>	
-		<p>To change direct deposit information for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
+		<p>To change direct deposit information for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
 
 		</details>--></details>
 		<!--<details id="details-panel2" class="provisional wb-details-close">
@@ -238,7 +238,7 @@
 		<details id="details-panel3" class="provisional wb-details-close">
         <summary><span class="fas fa-university mrgn-rght-sm"></span>Through your Canadian financial institution</summary>
 <!--<p><span class="far fa-clock"></span> <strong>Processing time:</strong> The following business day</p>-->
-	   <p><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
+	   <p class="mrgn-tp-md"><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
 
  <p>You can sign up for direct deposit or change your account information through many Canadian banks, credit unions, and trust companies. Visit your financial institution's website for information on how to sign up.</p>
 		<!--	<p>To be eligible to enroll for CRA direct deposit for businesses, your business must have a valid 15&nbsp;digit business number and one of the following <a href="/en/revenue-agency/services/tax/businesses/topics/changes-your-business/adding-accounts-your-business-number-bn.html">CRA program accounts</a>:</p>
@@ -346,8 +346,8 @@
 	  </details>
  <h2>Update other information</h2>
 	
-	   <p>Change your other business details with the CRA, including your contact information, change of owners, partners or directors, or your operating name.</p>
-	   <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business.html">Changes to your business and Canada Revenue Agency program accounts</a></p>
+	   <p>Change your other business details with the CRA, including your contact information, owners, partners or directors, or your operating name:</p>
+	   <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business.html">Changes to your business and CRA program accounts</a></p>
 
 	   
 	 <!--  <h2>Change your direct deposit information with other government departments</h2>
