--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-landing-page.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-landing-page.html
@@ -73,30 +73,30 @@
 		     <div class="wb-eqht row">
                    <div class="col-lg-4 col-md-6">
                       <!--  <h3><a href="https://test.canada.ca/cra-arc/jmlt333/update-info/change-address-phone.html">[Change your address <mark>or phone number</mark>]]</a></h3> -->
-			   <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html">Individuals</a></h3>
+			   <h3><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html">Individuals</a></h3>
                        <p>Sign up for or change your direct deposit information</p>
                     </div>
 				 <div class="col-lg-4 col-md-6">
-                        <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html">Businesses</a></h3>
+                        <h3><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html">Businesses</a></h3>
                         <p>Update your direct deposit information online or with your Canadian financial institution</p>
                     </div> 
 			      <div class="col-lg-4 col-md-6">
-                        <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html">Trusts</a></h3>
-                        <p>Find the form to update your direct deposit information</p>
+                        <h3><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html">Trusts</a></h3>
+                        <p>Update your direct deposit information online or by mailing in a form</p>
                     </div>
 			     	 <div class="col-lg-4 col-md-6">
-                        <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-non-residents.html">Non-residents</a></h3>
+                        <h3><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-non-residents.html">Non-residents</a></h3>
                         <p>Find the forms to sign up for or change your direct deposit information</p>
                     </div>
 	
 <!-- 		<div class="col-lg-4 col-md-6">
-                        <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html">Your name</a></h3>
+                        <h3><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html">Your name</a></h3>
                         <p>Inform us of a change in your first and/or last name</p>
                     </div>
 	
 			
  <div class="col-lg-4 col-md-6">
-                        <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/direct-deposit.html">Direct deposit</a></h3>
+                        <h3><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/direct-deposit.html">Direct deposit</a></h3>
                         <p>Sign up for or change your direct deposit information</p>
                     </div> -->
 
@@ -109,13 +109,13 @@
 
 		     <div class="wb-eqht row">
                    <div class="col-lg-4 col-md-6">
-                        <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-address.html">Business address</a></h3>
+                        <h3><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-address.html">Business address</a></h3>
                         <p>Change your physical, mailing, or books and records address</p>
                     </div>
 			     
 	
  		<div class="col-lg-4 col-md-6">
-                        <h3><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-name.html">Operating name</a></h3>
+                        <h3><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-name.html">Operating name</a></h3>
                         <p>Change, add or delete an operating or trade name</p>
                     </div>
 	
