--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html
@@ -70,7 +70,7 @@
              href: "https://www.canada.ca/en/revenue-agency/services/receiving-payments.html"
            },{
 			  title: "Direct deposit",
-             href: "https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-landing-page.html"
+             href: "https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-landing-page.html"
            }
          ],
            search: true,
@@ -88,7 +88,7 @@
 
 <!--        <p class="pull-left small"><strong>You may be looking for:</strong></p>
 <ul class="pull-left mrgn-lft-md list-unstyled small">
-<li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-address.html">Change your business address</a></li>
+<li><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-address.html">Change your business address</a></li>
 <li><a href="">Change your trust address</a></li>
 	<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/changing-a-charitys-address-phone-number.html">Change your charity address</a></li>
 
@@ -109,13 +109,13 @@
 		<details id="details-panel1" class="provisional wb-details-close">
             <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
 <!--<p><span class="far fa-clock"></span> <strong>Processing time:</strong> Immediate</p>-->
-				   <p><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
+				   <p class="mrgn-tp-md"><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
 
 		    <p>Sign up for direct deposit or manage your information using Represent a Client.</p>
-  <p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></p>
+  <p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></p>
 
 	     <ol class="">
-   <li class="mrgn-bttm-sm">Sign in<!-- to your <strong>online account</strong><br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>--> </li>
+   <li class="mrgn-bttm-sm">Sign in<!-- to your <strong>online account</strong><br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>--> </li>
 
     <li class="mrgn-bttm-sm">Enter the Trust Number of the account you want to access and select <strong>Access T3</strong></li>
     
@@ -135,11 +135,11 @@
   </ol>		
 <h3 class="h4 class="mrgn-tp-xl">If you can't access your account</h3>
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by mail</a>.</p>
-	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
+	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
 </details>
 		<details id="details-panel2" class="provisional wb-details-close">
             <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
-				   <p><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
+				   <p class="mrgn-tp-md"><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
 
 		<!--<p><span class="far fa-clock"></span><strong> Processing time: </strong>5 business days after we receive your document</p>-->
 		
