--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/language.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/language.html
@@ -52,10 +52,10 @@
            },
 {
              title: "Update your information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information.html"
            },{
 			  title: "Update your personal information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html"
            }
          ],
            search: true,
@@ -89,9 +89,9 @@
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
             <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
-			<p><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
+			<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
 <p>Change your language of correspondence online using My Account.</p>
-			<p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
+			<p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
 		<!--	 <p>Use your CRA My Account to:</p>
 			<ul>
 				<li>Change the phone number the CRA will use to contact you</li>
@@ -99,7 +99,7 @@
 			</ul>-->
 			<ol class="">
 				
-   <li class="mrgn-bttm-sm">Sign in<!-- to your <strong>online account</strong><br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a> </li>-->
+   <li class="mrgn-bttm-sm">Sign in<!-- to your <strong>online account</strong><br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a> </li>-->
 
     <li class="mrgn-bttm-sm">Select <strong>Profile</strong></li>
     <li class="mrgn-bttm-sm">Scroll to <strong>Language of Correspondence</strong></li>
@@ -114,15 +114,15 @@
 	
 <h2 class="h4 mrgn-tp-xl">If you can't sign in to your account</h2> 
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
-	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
+	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
 	
 <!--<details><summary class="max-content">Make a change for someone else</summary>-->
 			<h2 class=h4>Make a change for someone else</h2>
-		 <p>To change the language of correspondence online for someone else, including a spouse or family member, you must be an authorized representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
+		 <p>To change the language of correspondence online for someone else, including a spouse or family member, you must be an authorized representative and use <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
 </details>
 		<details id="details-panel2" class="provisional wb-details-close">
             <summary><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
-<p class="mrgn-bttm-lg"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>	
+<p class="mrgn-bttm-lg mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>	
 		
 
    <dl class="dl-horizontal">
@@ -206,7 +206,7 @@
 		</details>
 		<details id="details-panel3" class="provisional wb-details-close">
         <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail or fax</summary>
-					<p><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
+					<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
 
 	 <p>Mail or fax a letter to your <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/tax-centres.html">tax centre</a> with the following information:</p>
 		<ul class="fa-ul">
@@ -302,7 +302,7 @@
 	   <h2>Update other information</h2>
 	 <!--  <h3>After you change your address</h3> -->
 	   <p>Change your other personal details with the CRA, including your home or mailing address, phone number or email address.</p>
-	   <p><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
+	   <p><a href="/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
 
 	  
 
