--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-email.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-email.html
@@ -52,10 +52,10 @@
            },
 {
              title: "Update your information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information.html"
           },{
 			  title: "Update your personal information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html"
            }
          ],
            search: true,
@@ -93,12 +93,12 @@
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
             <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
-			<p><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
+			<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
 
 			 <p>Change your email address online using My Account.</p>
-			<p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
+			<p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
 			 <ol class="">
-   <li class="mrgn-bttm-sm">Sign in<!-- to your <strong>online account</strong><br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a>--> </li>
+   <li class="mrgn-bttm-sm">Sign in<!-- to your <strong>online account</strong><br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a>--> </li>
     <li class="mrgn-bttm-sm">Select <strong>Profile</strong></li>
    <li class="mrgn-bttm-sm"> Scroll to <strong>Notification preference</strong></li>
     <li class="mrgn-bttm-sm">Select <strong>Edit</strong></li>
@@ -111,15 +111,15 @@
 	 
 <h2 class=h4>If you can't sign in to your account</h2>
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
-	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
+	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
 
 	<!--<details><summary class="max-content">Make a change for someone else</summary>-->
 			<h2 class=h4>Make a change for someone else</h2>
-		 <p>To change an email address online for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
+		 <p>To change an email address online for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
 		</details>
 		<details id="details-panel2" class="provisional wb-details-close">
             <summary><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
-<p class="mrgn-bttm-lg"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>	
+<p class="mrgn-bttm-lg mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>	
 
 <!-- <p>Call the CRA by phone or TTY if you have:</p>
       <ul>
@@ -261,8 +261,8 @@
 		</details> -->
 		<details id="details-panel4" class="provisional wb-details-close">
         <summary><span class="far fa-file-alt mrgn-rght-sm"></span>On your tax return</summary>
-  <p class="pull-left"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
-<ul class="pull-left mrgn-lft-md list-unstyled">
+  <p class="pull-left mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
+<ul class="pull-left mrgn-lft-md mrgn-tp-md list-unstyled">
 	<li>If you file <strong>electronically</strong>, at the same date and time your return is processed</li>
 
 <li>If you file a <strong>paper return</strong>, approximately 8 weeks after receiving your return</li>
@@ -283,7 +283,7 @@
 	   <h2>Update other information</h2>
 	 <!--  <h3>After you change your address</h3> -->
 	   <p>Change your other personal details with the CRA, including your home or mailing address or phone number.</p> 
-	   <p><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
+	   <p><a href="/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
 
 	  
 
