--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html
@@ -52,10 +52,10 @@
            },
 {
              title: "Update your information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information.html"
            },{
 			  title: "Update your personal information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html"
            }
          ],
            search: true,
@@ -72,7 +72,7 @@
 
         <p class="pull-left small"><strong>You may be looking for:</strong></p>
 <ul class="pull-left mrgn-lft-md list-unstyled small">
-<li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-name.html">Change a business operating name</a></li>
+<li><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-name.html">Change a business operating name</a></li>
 </ul>
 	   <div class="clearfix">&nbsp;</div>
      <div class="mwsbodytext text parbase section">
@@ -102,7 +102,7 @@
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
             <summary><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
-			<p><span class="far fa-clock"></span><strong>Processing time:</strong> Immediate</p>
+			<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong>Processing time:</strong> Immediate</p>
 
 <p>You can change your name by phone if you haven't already changed one of your names. For example, if you previously changed your first name, you cannot change your last name by phone.</p>
 <details><summary class="max-content">Exception: Changing back to your birth name</summary>
@@ -189,7 +189,7 @@
 		</details>
 		<details id="details-panel2" class="provisional wb-details-close">
             <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
-					<p><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
+					<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
 
 		 <p>You must provide documentation if you have already changed your name.</p> 
     <p>Send or fax a letter to your <a href=https://www.canada.ca/en/revenue-agency/corporate/contact-information/tax-centres.html">tax centre</a> with the following information:</p> 
@@ -252,7 +252,7 @@
  <ul> 
   <li data-wb-fieldflow="{ &quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;:&quot;#question2&quot;, &quot;class&quot;: &quot;hidden&quot; }">Personal name</li> -->
   <!--result--> 
-<!--  <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-name.html">Business operating name</a></li> 
+<!--  <li><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-name.html">Business operating name</a></li> 
  </ul> 
 </div> -->
 <!-- <section id="question2" class="hidden"> 
@@ -496,7 +496,7 @@
 	 <h2 id="section4">Update other information</h2>
 	
 	   <p>Change your other personal details with the CRA, including your address, phone number or email address.</p> 
-	   <p><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
+	   <p><a href="/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
 
 	<!--   <h2>Change your name with other government departments</h2>   
 	     <p>The CRA will not share your name change with other government departments. You must do this separately. The only exception to this is if you allowed CRA to share this information with Elections Canada on your tax return.</p> 
