--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html
@@ -52,10 +52,10 @@
            },
 {
              title: "Update your information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information.html"
            },{
 			  title: "Update your personal information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html"
            }
          ],
            search: true,
@@ -81,7 +81,7 @@
 
 <div class="clearfix">&nbsp;</div>
 
-    <p>Having an up-to-date telephone number with the CRA is important since it may be needed for <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html">multi‑factor authentication</a> (MFA) or when we need to contact you by phone.</p>
+    <p>Having an up-to-date telephone number with the CRA is important since it may be needed for <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html">multi‑factor authentication</a> (MFA) or when we need to contact you by phone.</p>
      <p>For information about when we may contact you and how to recognize a scam, visit <a href="https://test.canada.ca/cra-arc/cops/scams/recognize-scams-cra.html">Recognize a scam</a>.</p>
 	 <!--  <p>Keeping your information up-to-date will ensure that you keep getting your <a href="">GST/HST credit</a> (including those from certain related provincial payments), <a href="">Canada child benefit payments</a> (including those from certain related provincial or territorial programs), and <a href="">advanced Canada workers benefit payments</a> you may be entitled to, as well as important correspondence from the CRA. Otherwise, your payments may stop or you may not get important correspondence like your notice of assessment.</p> -->
 	 <!--  <p>Keeping your information up-to-date will ensure you receive all your payments and correspondences.</p> -->
@@ -90,9 +90,9 @@
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
             <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
-			<p><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
+			<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
 <p>Change your phone number online using My Account.</p>
-			<p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
+			<p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
 		<!--	 <p>Use your CRA My Account to:</p>
 			<ul>
 				<li>Change the phone number the CRA will use to contact you</li>
@@ -100,7 +100,7 @@
 			</ul>-->
 			<ol class="">
 				
-   <li class="mrgn-bttm-sm">Sign in<!-- to your <strong>online account</strong><br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a> </li>-->
+   <li class="mrgn-bttm-sm">Sign in<!-- to your <strong>online account</strong><br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a> </li>-->
 
     <li class="mrgn-bttm-sm">Select <strong>Profile</strong></li>
     <li class=>Change the phone number the CRA will use:</li>
@@ -123,15 +123,15 @@
 	
 <h2 class="h4 mrgn-tp-xl">If you can't sign in to your account</h2> 
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
-	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
+	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
 	
 <!--<details><summary class="max-content">Make a change for someone else</summary>-->
 			<h2 class=h4>Make a change for someone else</h2>
-		 <p>To change a phone number online for someone else, including a spouse or family member, you must be an authorized representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
+		 <p>To change a phone number online for someone else, including a spouse or family member, you must be an authorized representative and use <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
 </details>
 		<details id="details-panel2" class="provisional wb-details-close">
             <summary><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
-<p class="mrgn-bttm-lg"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>	
+<p class="mrgn-bttm-lg mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>	
 		
 
    <dl class="dl-horizontal">
@@ -215,7 +215,7 @@
 		</details>
 		<details id="details-panel3" class="provisional wb-details-close">
         <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail or fax</summary>
-					<p><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
+					<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
 
 	 <p>Mail or fax your request to your <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/tax-centres.html">tax centre</a> using one of the following options:</p>
 		<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
@@ -301,8 +301,8 @@
 		</details> -->
 		<details id="details-panel4" class="provisional wb-details-close">
         <summary><span class="far fa-file-alt mrgn-rght-sm"></span>On your tax return</summary>
-  <p class="pull-left"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
-<ul class="pull-left mrgn-lft-md list-unstyled">
+  <p class="pull-left mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
+<ul class="pull-left mrgn-lft-md mrgn-tp-md list-unstyled">
 	<li>If you file <strong>electronically</strong>, at the same date and time your return is processed</li>
 
 <li>If you file a <strong>paper return</strong>, approximately 8 weeks after receiving your return</li>
@@ -310,7 +310,7 @@
 </ul>
 			<div class="clearfix">&nbsp;</div>			
 			<!--<p>You can change your personal information, including your phone number, by writing it on your paper tax return or if you are filing electronically through a tax preparer or authorized service provider using EFILE. You <strong>cannot</strong> change it using certified tax software.</p>-->
-			<p>A phone number can be updated through certified tax software. This include the 2D Barcode return printed from the software, as well as through NETFILE. The home telephone number can be updated through all methods of filing a tax return.
+			<p>A phone number can be updated through certified tax software. This includes the 2D Barcode return printed from the software, as well as through NETFILE. The home telephone number can be updated through all methods of filing a tax return.
 			<p>However, you should not wait for tax filing season to update your information. In some cases, identification changes could have a direct impact on your eligibility for benefits.</p>
 <!--<p>Because using a tax return to update information will take longer, it is better to update your information using one of the other methods.</p>-->
 </div>
@@ -327,7 +327,7 @@
 	   <h2>Update other information</h2>
 	 <!--  <h3>After you change your address</h3> -->
 	   <p>Change your other personal details with the CRA, including your home or mailing address or email address.</p>
-	   <p><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
+	   <p><a href="/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
 
 	  
 
