--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-address.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-address.html
@@ -68,10 +68,10 @@
            },
 {
              title: "Update your information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information.html"
            },{
 			  title: "Update your personal information with the CRA",
-             href: "/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html"
+             href: "/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html"
            }
          ],
            search: true,
@@ -89,7 +89,7 @@
 
       <!--  <p class="pull-left small"><strong>You may be looking for:</strong></p>
 <ul class="pull-left mrgn-lft-md list-unstyled small">
-<li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-address.html">Change your business address</a></li>
+<li><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/business-change-address.html">Change your business address</a></li>
 <li><a href="">Change your trust address</a></li>
 	<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/changing-a-charitys-address-phone-number.html">Change your charity address</a></li>
 
@@ -105,16 +105,16 @@
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
             <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
-			<p><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
+			<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
 			 <p>Change your address online using My Account.</p>
-			<p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
+			<p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
    <!--   <ul>
         <li>get tax credit information</li>
         <li>send new documentation using "Submit documents"</li>
       </ul> -->
-   <!--   <div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">Sign in to My Account</a> <a href="/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html" class="mrgn-lft-md">Register</a></div> -->
+   <!--   <div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">Sign in to My Account</a> <a href="/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html" class="mrgn-lft-md">Register</a></div> -->
 <ol class="">
-   <li class="mrgn-bttm-sm">Sign in<!-- to your account<br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a> --></li>
+   <li class="mrgn-bttm-sm">Sign in<!-- to your account<br> <a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a> --></li>
 
     <li class="mrgn-bttm-sm">Select <strong>Profile</strong></li>
     <li class="mrgn-bttm-sm">Go to <strong>Contact information</strong></li>
@@ -123,7 +123,7 @@
   </ol>
 			<!--  <details><summary>Update your address online</summary>
 	   <ol class="">
-    <li>Sign in to your <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></li>
+    <li>Sign in to your <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></li>
     <li>Select <strong>Profile</strong></li>
     <li>Select <strong>Contact information</strong></li>
     <li>Select <strong>Edit</strong></li>
@@ -131,10 +131,10 @@
 </details> -->
 <h2 class=h4>If you can't access your account</h2>
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
-	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
+	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
 	<!--<details><summary class="max-content">Make a change for someone else</summary>	-->
 			<h2 class=h4>Make a change for someone else</h2>
-		<p>To change an address online for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
+		<p>To change an address online for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
 
 		</details>
 		<details id="details-panel2" class="provisional wb-details-close">
@@ -145,7 +145,7 @@
         <li>enquiries about the DTC</li>
         <li>questions about your CRA account</li>
       </ul> -->
-<p class="mrgn-bttm-lg"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>	
+<p class="mrgn-bttm-lg mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>	
 			   <dl class="dl-horizontal">
 				   </dd>
 			<dt><strong>Before you call</strong></dt>
@@ -227,7 +227,7 @@
 		</details>
 	<details id="details-panel3" class="provisional wb-details-close">
         <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
-		<p><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
+		<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
 	<!-- <p>Mail or fax your request to your <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/tax-centres.html">tax centre</a> using one of the following options:</p>-->
 		<p>Follow these steps to change your address by mail:</p>
 		<!--<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
@@ -286,8 +286,8 @@
 		</details>
 		<details id="details-panel4" class="provisional wb-details-close">
         <summary><span class="far fa-file-alt mrgn-rght-sm"></span>On your tax return</summary>
-			  <p class="pull-left"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
-<ul class="pull-left mrgn-lft-md list-unstyled">
+			  <p class="pull-left mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
+<ul class="pull-left mrgn-lft-md mrgn-tp-md list-unstyled">
 <li>If you file <strong>electronically</strong>, at the same date and time your return is processed </li>
 <li>If you file a <strong>paper return</strong>, approximately 8 weeks after receiving your return</li>
 
@@ -311,7 +311,7 @@
 	   <h2>Update other information</h2>
 	 <!--  <h3>After you change your address</h3> -->
 	   <p>Change your other personal details with the CRA, including your phone number or email address.</p> 
-	   <p><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
+	   <p><a href="/sign-in-prototype/en/revenue-agency/services/update-information/update-personal-information.html">Update your personal information with the CRA</a></p>
 
 	   
 
