--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -527,5 +527,6 @@
 <script src="https://canada.ca/etc/designs/canada/wet-boew/js/ep-pp.min.js"></script> 
 <script src="https://canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
 <script src="https://canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
+	<script src="https://cra-proto.github.io/sign-in-test/alpha-banner.js"></script>
 </body>
 </html>
